auto-test/tests/chapter_18/invalid_types/invalid_member_operators/postfix_precedence.c
int main(void) {
    struct s {
        int a;
    };
    struct s x = {10};
    
    
    
    
    return &x->a;
}